--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@
     /*Шрифты */
     --first-font: "Roboto";
     --logo-font: "Raleway";
+
+    --transition-duration: 250ms;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*   Основные стили */
@@ -51,7 +55,8 @@ body {
 
 
 .link:hover,
-.link:focus {
+.link:focus,
+.link:active {
     color: var(--accent-color);
     fill: currentColor;
 }
@@ -62,15 +67,35 @@ body {
 }
 
 .header-nav .header-link.current {
-    color: var(--text-color-tittle);
+    color: var(--accent-color);
 }
 
 /*   Стили хедера  */
 .header-link{
+    position: relative;
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition: color var(--animation-time);
 }
+.header-link::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+   opacity: 0;
+   transition: opacity 250ms var(--time-funcsion);
+}
+
+.header-link.current::after{
+    opacity: 1;
+}
+
 .main-nav{
     display: flex;
     align-items: center;
@@ -103,6 +128,7 @@ body {
 .header-link-contakts{
     display: flex;
     align-items: center;
+    transition: fill var(--animation-time);
 }
 .header-list .header-item{
     margin-right: 50px;
@@ -168,6 +194,8 @@ margin-bottom: 20px;
     display: inline-block;
     margin-top: 9px;
     color: var(--text-color-footer);
+    transition: color var(--animation-time);
+
 }
 
 .logo-studio-footer{
@@ -219,6 +247,7 @@ margin-bottom: 20px;
     align-items: center;
     color: #EEEEEE;
     background: rgba(255, 255, 255, 0.1);
+    transition: background-color var(--animation-time);
 
 }
 
@@ -263,6 +292,7 @@ margin-bottom: 30px;
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    transition: color var(--animation-time);
 }
 
 .banner{
@@ -286,6 +316,63 @@ margin-bottom: 30px;
     font-weight: 700;
     line-height: 1.14;
 }
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: opasity var(--time-funcsion), visibility var(--time-funcsion);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: var(--bakrnd-color-second);
+    min-width: 528px;
+    min-height: 581px;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 4px;
+    opacity: 1;
+    transform: scale(1) translate(-50%, -50%);
+    transition: transform var(--timing-function), opasity var(--timing-function);
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    fill: #000000;
+    background-color: rgba(255, 255, 255, 1);
+    transition: fill var(--timing-function);
+}
+
+.icon-close {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.close-button:hover,
+.close-button:focus {
+    fill: var(--accent);
+}
+
 .list-techology{
     padding: 0;
     justify-content: space-between;
@@ -342,7 +429,29 @@ padding-bottom: 94px;
   .works-img, .team-img, .portfolio-img{
     display: block;
   }
+  .works-item{
+    position: relative;
+  }
+.item-overlay{
+    position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 70px;
+        background-color: rgba(47, 48, 58, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
 
+  .overlay-text{
+    font-size: 16px;
+        font-weight: 700;
+        line-height: 1.14;
+        text-transform: uppercase;
+        color: var(--text-banner-color);
+        margin: 0;
+  }
   .team{
     background-color: var(--bakrnd-color-second);
     padding-top: 94px;
@@ -407,6 +516,8 @@ background: #FFFFFF;
 justify-content: center;
     align-items: center;
     color: #afb1b8;
+    transition: fill var(--animation-time);
+    transition: background-color var(--animation-time);
    
 }
 .social-link-item{
@@ -418,7 +529,9 @@ display: flex;
     margin-right: 10px;
 }
 .icon-social{
-    fill: currentColor
+    fill: currentColor;
+    transition: color var(--animation-time);
+    transition: background-color var(--animation-time);
 }
 
 .social-link:hover,
@@ -435,6 +548,7 @@ display: flex;
         display: flex;
         justify-content: space-between;
         padding-left: 0px;
+        transition: color var(--animation-time);
 }
 .banner-title {
     color: var(--text-banner-color);
@@ -453,6 +567,7 @@ display: flex;
 display: flex;
     justify-content: center;
     align-items: center;
+    transition: border var(--animation-time);
    
     
 }
@@ -470,16 +585,21 @@ display: flex;
 .clients-icon{
     fill: #afb1b8;
 }
-.clients-link:hover, .clients-link:focus{
+.clients-link:hover svg, .clients-link:focus svg{
     fill: currentColor;
 }
 
+.clients-link.svg{
+    transition: fill var(--animation-time);
+
+}
 .clients-icon:hover,
 .clients-icon:focus {
     fill: currentColor;
 }
 .clients-item:hover, .clients-item:focus{
     border-color: #2196F3;
+    fill: currentColor;
  
 }
 
@@ -533,6 +653,9 @@ display: flex;
     text-align: center;
     letter-spacing: 0.03em;
     cursor: pointer;
+    transition: background-color var(--transition-duration) var(--timing-function),
+            color var(--transition-duration) var(--timing-function),
+            box-shadow var(--transition-duration) var(--timing-function);
 }
 
 .menu-item:not(:last-child) {
@@ -545,6 +668,13 @@ display: flex;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-container{
+    position: relative;
+    overflow: hidden;
+}
+
+
+
 .portfolio-list{
     display: flex;
     padding-left: 0px;
@@ -555,8 +685,36 @@ display: flex;
 }
 .portfolio-link{
     display: block;
+    transition: box-shadow var(--animation-time)
+
 }
 .portfolio-link:hover, 
 .portfolio-link:focus{
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.slider-text {
+    font-weight: 400;
+        color: #fff;
+        font-size: 18px;
+        line-height: 1.5;
+        padding: 63px 24px 63px 24px;
+        margin: 0;
+}
+
+.portfolio-slider{
+
+    position: absolute;
+        bottom: -1%;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(33, 150, 243, 0.9);
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      
+     
+}
+.portfolio-link:hover .portfolio-slider
+ {
+    transform: translateY(0);
 }
