--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     --logo-font: "Raleway";
 
     --transition-duration: 250ms;
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --time-funcsion: cubic-bezier(0.4, 0, 0.2, 1);
     --animation-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -324,7 +324,9 @@ margin-bottom: 30px;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opasity var(--time-funcsion), visibility var(--time-funcsion);
+    opacity: 1;
+    visibility: visible;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -343,7 +345,9 @@ margin-bottom: 30px;
     border-radius: 4px;
     opacity: 1;
     transform: scale(1) translate(-50%, -50%);
-    transition: transform var(--timing-function), opasity var(--timing-function);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+           
 }
 
 .close-button {
@@ -358,7 +362,7 @@ margin-bottom: 30px;
     cursor: pointer;
     fill: #000000;
     background-color: rgba(255, 255, 255, 1);
-    transition: fill var(--timing-function);
+    transition: fill var(--animation-time);
 }
 
 .icon-close {
@@ -445,7 +449,7 @@ padding-bottom: 94px;
 }
 
   .overlay-text{
-    font-size: 16px;
+    font-size: 14px;
         font-weight: 700;
         line-height: 1.14;
         text-transform: uppercase;
@@ -561,14 +565,14 @@ display: flex;
 }
 .clients-link{
 
-
+color: #afb1b8;
    width: 100%;
    height: 100%;
 display: flex;
     justify-content: center;
     align-items: center;
     transition: border var(--animation-time);
-   
+    
     
 }
 
@@ -581,18 +585,20 @@ display: flex;
     border:  1px solid #AFB1B8;
     border-radius: 4px;
     fill:#afb1b8;
+ 
+
 }
 .clients-icon{
+   
     fill: #afb1b8;
+    transition: fill var(--animation-time);
+    
 }
 .clients-link:hover svg, .clients-link:focus svg{
     fill: currentColor;
 }
 
-.clients-link.svg{
-    transition: fill var(--animation-time);
 
-}
 .clients-icon:hover,
 .clients-icon:focus {
     fill: currentColor;
@@ -653,9 +659,9 @@ display: flex;
     text-align: center;
     letter-spacing: 0.03em;
     cursor: pointer;
-    transition: background-color var(--transition-duration) var(--timing-function),
-            color var(--transition-duration) var(--timing-function),
-            box-shadow var(--transition-duration) var(--timing-function);
+    transition: background-color var(--transition-duration) var(--time-funcsion),
+            color var(--transition-duration) var(--time-funcsion),
+            box-shadow var(--transition-duration) var(--time-funcsion);
 }
 
 .menu-item:not(:last-child) {
